[project]
name = "ComfyUI_pyannote"
description = "This repository provides custom nodes for ComfyUI designed to process audio files, performing speaker diarization and integrating speaker data into whisper-transcribed segments. These nodes utilize the PyAnnote library for speaker identification and pandas for efficient data handling."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["pyannote.audio", "torch", "torchaudio", "pydub"]

[project.urls]
Repository = "https://github.com/ramesh-x90/ComfyUI_pyannote"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ramesh-x90"
DisplayName = "ComfyUI_pyannote"
Icon = ""
